--- a/task1/task1_3/task1_3.css
+++ b/task1/task1_3/task1_3.css
@@ -10,6 +10,8 @@
     position: relative;
     margin: 20px;
     padding: 20px;
+    overflow: hidden;
+    min-width: 600px;
 }
 
 .container:after{
@@ -38,7 +40,7 @@
 }
 
 .container .team_introduce{
-    margin: 0 160px 0 240px;
+    margin: 0 140px 0 240px;
     background-color: #ffffff;
     border: 1px solid #999;
     padding: 20px;
