--- a/task1/task1_8/task1_8.css
+++ b/task1/task1_8/task1_8.css
@@ -10,7 +10,7 @@ body{
     box-sizing: border-box;
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
-    border: 10px solid #fff;
+    border: 1px solid #999;
 }
 
 .row:after {
@@ -26,7 +26,7 @@ body{
 */
 
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 767px){
     .col-md-12 {
         width: 100%;
     }
